--- a/SpritesheetCreator/spritesheetcreator.ui
+++ b/SpritesheetCreator/spritesheetcreator.ui
@@ -125,6 +125,9 @@
          <property name="autoScrollMargin">
           <number>2</number>
          </property>
+         <property name="editTriggers">
+          <set>QAbstractItemView::NoEditTriggers</set>
+         </property>
          <property name="dragDropOverwriteMode">
           <bool>false</bool>
          </property>
